--- a/style.css
+++ b/style.css
@@ -4,7 +4,46 @@
 }
 h2{
     padding-top: 4rem;
+    color: #3c4043;
 }
 p{
     padding-top: 1.25rem;
+    font-size: .875rem;
+}
+
+.content{
+    display: flex;
+    flex-direction: column;
+    padding: .5rem;
+}
+
+.top{
+    display: flex;
+    justify-content: space-between;
+}
+
+.left img{
+    width: 7%;
+    vertical-align: middle;
+}
+
+.left span{
+    color: #3c4043;
+    font-size: 20px;
+    vertical-align: middle;
+}
+
+ul{
+    display: flex;
+    list-style: none;
+    column-gap: 1rem;
+    padding: 0;
+}
+a{
+    text-decoration: none;
+    color: #3c4043;
+    font-size: .9375rem;
+}
+.bottom{
+    border-bottom: 1px solid rgba(151,151,151,.5);
 }
