--- a/style.css
+++ b/style.css
@@ -1,25 +1,56 @@
+/* reset */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .container{
     max-width: 62.5rem;
     margin: auto;
 }
+header{
+    position: fixed;
+    z-index: 7;
+    width: 100%;
+    background-color: white;
+}
+main{
+    padding: 8.44rem 0;
+}
 h2{
     padding-top: 4rem;
     color: #3c4043;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 32px;
+    font-family: "Google Sans",sans-serif;
+}
+h3{
+    color: #3c4043;
+    font-family: "Google Sans",sans-serif;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 26px;
+    margin: 0;
+    padding: 52px 0 0 0;
 }
 p{
     padding-top: 1.25rem;
     font-size: .875rem;
+    font-family: Roboto,arial,sans-serif;
+    line-height: 24px;
 }
 
 .content{
     display: flex;
     flex-direction: column;
-    padding: .5rem;
 }
 
 .top{
     display: flex;
     justify-content: space-between;
+    padding: .5rem;
 }
 
 .left img{
@@ -27,23 +58,64 @@ p{
     vertical-align: middle;
 }
 
+.right .fa-circle-user{
+    font-size: 30px;
+    margin-left: 20px;
+    vertical-align: middle;
+}
+.fa-bars{
+    vertical-align: middle;
+}
+
 .left span{
-    color: #3c4043;
+    color: #5f6368;
     font-size: 20px;
     vertical-align: middle;
+    font-family: "Google Sans",sans-serif;
 }
 
 ul{
     display: flex;
     list-style: none;
-    column-gap: 1rem;
-    padding: 0;
+    column-gap: 3rem;
+    padding: .5rem;
 }
-a{
+ul li a{
     text-decoration: none;
-    color: #3c4043;
+    color: #5f6368;
     font-size: .9375rem;
+    font-family: "Google Sans",sans-serif;
 }
 .bottom{
     border-bottom: 1px solid rgba(151,151,151,.5);
+}
+ol{
+    color: rgba(0,0,0,.87);
+    font-family: Roboto,arial,sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.54
+}
+
+footer{
+    background-color: #f5f5f5;
+}
+
+.content-footer{
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-left ul li a{
+    font-size: 11px;
+}
+.footer-left ul{
+    column-gap: .5rem;
+}
+
+.right-footer img{
+    vertical-align: middle;
+}
+.right-footer{
+    align-self: center;
 }
