--- a/style.css
+++ b/style.css
@@ -50,12 +50,15 @@ p{
 .top{
     display: flex;
     justify-content: space-between;
-    padding: .5rem;
+    padding: .6rem .5rem .5rem .5rem
+}
+.left{
+    display: flex;
 }
 
 .left img{
-    width: 7%;
-    vertical-align: middle;
+    width: 6%;
+    margin-left: 1rem;
 }
 
 .right .fa-circle-user{
@@ -69,8 +72,8 @@ p{
 
 .left span{
     color: #5f6368;
-    font-size: 20px;
-    vertical-align: middle;
+    font-size: 18px;
+    align-self: center;
     font-family: "Google Sans",sans-serif;
 }
 
@@ -78,13 +81,26 @@ ul{
     display: flex;
     list-style: none;
     column-gap: 3rem;
-    padding: .5rem;
+    padding: .5rem .5rem 0 .5rem;
+    margin-left: 1rem;
 }
 ul li a{
     text-decoration: none;
     color: #5f6368;
     font-size: .9375rem;
     font-family: "Google Sans",sans-serif;
+}
+ul li{
+    padding-bottom: 12px;
+}
+nav a:hover{
+    color: #3367d6;
+}
+.selected{
+    color: #3367d6;
+}
+.bar{
+    border-bottom: solid 3px #3367d6;
 }
 .bottom{
     border-bottom: 1px solid rgba(151,151,151,.5);
